--- a/css/style.css
+++ b/css/style.css
@@ -135,15 +135,19 @@ body {
 .contact h2 {
   margin-bottom: 1rem;
 }
-.menu p,
-.contact p {
+.menu p {
   text-align: center;
   max-width: 30rem;
   margin: auto;
   font-weight: 100;
   line-height: 1.6;
 }
-
+.contact p {
+  text-align: center;
+  max-width: 30rem;
+  font-size: 1.2rem;
+  margin: auto;
+}
 .menu .row {
   display: flex;
   flex-wrap: wrap;
